--- a/package.json
+++ b/package.json
@@ -1,7 +1,24 @@
 {
-	"name": "another-sequelize-restful",
-	"dependencies": {
-		"underscore": "latest"
-	}
+  "name": "new-sequelize-restful",
+  "dependencies": {
+    "underscore": "latest"
+  },
+  "description": "Exports standard restful APIs for Sequelize models",
+  "version": "0.0.0",
+  "main": "lib/route.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/blekr/new-sequelize-restful.git"
+  },
+  "keywords": [
+    "sequelize"
+  ],
+  "author": "wenchengsheng <407375207@qq.com>",
+  "license": "GNU GENERAL PUBLIC LICENSE",
+  "bugs": {
+    "url": "https://github.com/blekr/new-sequelize-restful/issues"
+  }
 }
-
